--- a/themes/default-book/stylesheets/_nav.scss
+++ b/themes/default-book/stylesheets/_nav.scss
@@ -19,7 +19,7 @@
 .nav {
     padding: 20px;
     flex-grow: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .nav-header {
