--- a/themes/default-docs/stylesheets/_markdown.scss
+++ b/themes/default-docs/stylesheets/_markdown.scss
@@ -188,7 +188,7 @@
     pre {
         display: inline-block;
         width: 100%;
-        overflow-x: scroll;
+        overflow-x: auto;
         box-sizing: border-box;
 
         border-radius: 4px;
