--- a/themes/default-docs/stylesheets/_nav.scss
+++ b/themes/default-docs/stylesheets/_nav.scss
@@ -15,7 +15,7 @@
 .nav {
     padding: 20px;
     flex-grow: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .nav-header {
